--- a/src/css/main.module.css
+++ b/src/css/main.module.css
@@ -45,6 +45,7 @@
     border-radius: 2px;
     padding: 4px 26px;
     margin: 0 30px 0 auto;
+    outline: none;
 }
 .error {
     width: 100%;
@@ -53,3 +54,58 @@
     margin: 10px 0;
     padding: 3px;
 }
+
+.tableSelect {
+    margin: 30px 0 0;
+    border-bottom: 1px solid var(--charcoal);
+    position: relative;
+}
+.tableSelect a {
+    margin: 0 4px 0 0;
+    text-decoration: none;
+    color: #9e9e9e;
+    padding: 1px 6px;
+}
+.tableSelect .tableSelectActive {
+    color: var(--charcoal);
+    background: var(--persian-green);
+    border-top-left-radius: 6px;
+    border-top-right-radius: 8px;
+} 
+
+.table {
+    border-collapse: collapse;
+    font-size: 0.78em;
+    color: #264653;
+}
+.table thead {
+    background: #2a9d90;
+    border-color: #2a9d90;
+}
+.table tbody {
+    border-color: #2a9d9054;
+}
+.table th,
+.table td {
+    padding: 4px;
+}
+.table button {
+    outline: none;
+    background: var(--orange-yellow);
+    box-shadow: 0 0 4px 1px var(--sandy-brown);
+    border: 0;
+    font-size: 0.9em;
+    padding: 2px 8px;
+    cursor: pointer;
+}
+.table .added {
+    pointer-events: none;
+    background: lightgray;
+    color: gray;
+    box-shadow: 0 0 4px 1px gray;
+}
+
+.loading {
+    text-align: center;
+}
+
