--- a/src/css/user-panel.module.css
+++ b/src/css/user-panel.module.css
@@ -2,12 +2,15 @@
     text-align: center;
 }
 .tableWrapper {
+    max-width: 1100px;
+    margin-left: auto;
+    margin-right: auto;
     min-height: 200px;
     position: relative;
 }
 .removeAllBtn {
     position: absolute;
-    bottom: 0;
+    bottom: -30px;
     right: 16px;
     padding: 4px 8px;
     background: var(--burnt-sienna);
@@ -17,4 +20,30 @@
     outline: none;
     cursor: pointer;
     box-shadow: 0 0 4px;
+    transition: filter .3s;
+}
+.removeAllBtn:hover {
+    filter: brightness(1.2);
+}
+
+
+@media screen and (min-width: 768px) {
+    .tableWrapper {
+        margin-bottom: 100px;
+    }
+    .removeAllBtn {
+        font-size: 1.4em;
+        bottom: -50px;
+    }
+}
+@media screen and (min-width: 1366px) {
+    .topHeader h1 {
+        font-size: 3em;
+    }
+    .removeAllBtn {
+        font-size: 1.68em;
+    }
+}
+@media screen and (min-width: 1920px) {
+
 }
